@@ -438,13 +438,6 @@ description=<<EOT
 Port the administrative interface listens on.
 EOT
 
-
-[ports.open]
-type=text
-description=<<EOT
-Ports on the external (world-facing) interface that are open.
-EOT
-
 [ports.allowed]
 type=text
 description=<<EOT
