@@ -76,7 +76,6 @@ which would allow full IP to all 512 destination addresses.
   <a href='ports.html#admin'>admin</a><br>
   <a href='ports.html#allowed'>allowed</a><br>
   <a href='ports.html#listeners'>listeners</a><br>
-  <a href='ports.html#open'>open</a><br>
   <a href='ports.html#redirect'>redirect</a><br>
 <p><b>[proxies]</b><br>
 This section allows you to configure locally proxied content.  We typically use this to proxy tools like Stinger rather 
