@@ -22,10 +22,6 @@ Options: imap|pop3<br>
 Enables "bogus" IMAP and POP servers.  These servers serve only to deliver a message (POP3) or send an alert (IMAP) to 
 inform the user that he/she must register before connectivity is allowed.  Content of the message is found at 
 &lt;conf_dir&gt;/templates/listener.msg<p>
-<a name=open></a>
-<b>open</b> <i>(text)</i><br>
-Default: 22/tcp,80/tcp,443/tcp<br>
-Ports on the external (world-facing) interface that are open.<p>
 <a name=redirect></a>
 <b>redirect</b> <i>(text)</i><br>
 Default: 80/tcp,110/tcp,143/tcp,443/tcp<br>
